fix: increase paragraph font size on mobile

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -3,6 +3,7 @@
 body {
   font-family: $ff-400;
   background-color: $clr-neutral-300;
+  overflow-x: hidden;
 }
 
 .container {
