--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -21,7 +21,7 @@ footer {
 
   .footer-nav {
     margin-top: 2.5rem;
-    font-size: $fs-fluid-250;
+    font-size: $fs-fluid-100;
     font-weight: $fw-semi-bold;
     text-transform: uppercase;
     display: flex;
